--- a/store/html/login.html
+++ b/store/html/login.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-</html>
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
@@ -17,7 +16,7 @@
 			<img src="../img/header.png" alt="">
 		</header>
 		<!-- Contnent -->
-		<div id="content">
+		<div class="content">
 			<div class="titArea">
 				<h1 class="titH1">Login</h1>
 			</div>
@@ -25,41 +24,40 @@
 			<div class="loginWrap">
 				<div class="form">
 					<div class="inpBox">
+						<input type="text" id="id" class="inp" placeholder="아이디">
 						<label for="id" class="blind">아이디</label>
-						<input type="text" id="id" class="inp">
 					</div>
 					<div class="inpBox">
-						<label for="id" class="blind">비밀번호</label>
-						<input type="text" id="id" class="inp">
+						<input type="text" id="pw" class="inp" placeholder="비밀번호">
+						<label for="pw" class="blind">비밀번호</label>
 					</div>
+				</div>
+				<div class="btnArea">
+					<button type="button" class="btnLogin">로그인</button>
 				</div>
 				<div class="login">
 					<div class="inpBox">
 						<input type="checkbox" class="checkBox" id="check1">
 						<label for="check1">로그인 정보 저장하기</label>
 					</div>
-					<ul class="link">
-						<li>
-							<a href="#none">dd</a>
-						</li>
-					</ul>
+					<div class="linkGroup">
+						<a href="#none" class="links line bold">회원가입</a>
+						<a href="#none" class="links line pointC3">아이디 찾기/비밀번호 찾기</a>
+					</div>
 				</div>
 
-				<div class="btnArea">
-					<button type="button">로그인</button>
-				</div>
+				<ul class="snsLogin">
+					<li class="kakao">
+						<a href="#none"><span class="blind">카카오</span></a>
+					</li>
+					<li class="naver">
+						<a href="#none"><span class="blind">네이버</span></a>
+					</li>
+					<li class="facebook">
+						<a href="#none"><span class="blind">페이스북</span></a>
+					</li>
+				</ul>
 			</div>
-			<ul class="snsLogin">
-				<li class="kakao">
-					<a href="javascript:;"><span class="blind">카카오</span></a>
-				</li>
-				<li class="naver">
-					<a href="javascript:;"><span class="blind">네이버</span></a>
-				</li>
-				<li class="facebook">
-					<a href="javascript:;"><span class="blind">페이스북</span></a>
-				</li>
-			</ul>
 		</div>
 		<!--// Contnent -->
 
