--- a/store/html/login.html
+++ b/store/html/login.html
@@ -6,7 +6,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="title" content="맛집">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<title>맛집 | login</title>
+<title>맛집 | 로그인</title>
 <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
