--- a/store/html/login.html
+++ b/store/html/login.html
@@ -33,7 +33,7 @@
 					</div>
 				</div>
 				<div class="btnArea">
-					<button type="button" class="btnLogin">로그인</button>
+					<button type="button" class="btnLogin"><span>로그인</span></button>
 				</div>
 				<div class="login">
 					<div class="inpBox">
